src/objects/Call__c.object
<CustomObject>

    <fields>
        <fullName>CustomField5__c</fullName>
        <label>CustomField5</label>
        <length>10</length>
        <type>Text</type>
    </fields>


    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Call</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>